backend/k8s/mail-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-mail
  template:
    metadata:
      labels:
        app: url-shortener-mail
    spec:
      containers:
      - name: url-shortener-mail
        image: url-shortener-mail:latest
        resources: {}
        ports:
            - containerPort: 8081
        imagePullPolicy: Never
        
---
apiVersion: v1
kind: Service
metadata:
    name: url-shortener-mail
spec:
    selector:
        app: url-shortener-mail
    ports:
        - port: 8081
          targetPort: 8081
    type: ClusterIP
