backend/k8s/mongo-auth-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth
spec:
  selector:
    app: mongo-auth
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-auth
spec:
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
        - name: mongo-auth
          image: mongo
          resources: {}
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo-auth-pvc
