backend/k8s/shorten-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-shorten
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-shorten
  template:
    metadata:
      labels:
        app: url-shortener-shorten
    spec:
      containers:
      - name: url-shortener-shorten
        image: url-shortener-shorten:latest
        resources: {}
        ports:
            - containerPort: 5000
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
    name: url-shortener-shorten
spec:
    selector:
        app: url-shortener-shorten
    ports:
        - port: 5000
          targetPort: 5000
    type: ClusterIP
