backend/k8s/gateway-depl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-auth
  annotations:    
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: rewrite-two-request
spec:
  rules:
  - host: pendek.in
    http:
      paths:
      - path: /api/(.*)/(.*)
        backend:
          serviceName: url-shortener-auth
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-shorten
  annotations:
    konghq.com/plugins: rewrite-one-request,app-jwt,jwt-claims-headers
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: pendek.in
    http:
      paths:
      - path: /api/shorten/(.*)
        backend:
          serviceName: url-shortener-shorten
          servicePort: 5000
